@@ -1,11 +1,12 @@
 package com.example.demo;
 
+import java.util.Base64;
+
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
-import sun.misc.BASE64Encoder;
 
 @SpringBootApplication
 @Controller
@@ -23,6 +24,6 @@ public class DemoApplication {
     @GetMapping("/base64")
     public ResponseEntity<String> base64(String str) {
         return ResponseEntity.ok("Base64("+str+") = "
-                +new BASE64Encoder().encode(str.getBytes()));
+                + Base64.getEncoder().encodeToString(str.getBytes()));
     }
 }
